Add building of javadocs-full to outer-level build script. Add guards for checking for changes in the BUILD.rst in the Project Directory. Simplified echo statements that were creating problems with coloring of source code. Update standalone build script. Fix error in checking build script for changes.